binded OnHealthChanged from USHealthComponent to OnHealthChanged of ASCharacter

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-19.39.49
+CoopGame.TimeStamp=2020.04.20-20.04.39
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2746,9 +2746,29 @@ SHealthComponent.Events=True
 REINST_BP_PlayerPawn_C_34.CameraCollision=True
 REINST_BP_PlayerPawn_C_34.Lag=True
 REINST_BP_PlayerPawn_C_34.Weapon=True
+REINST_BP_PlayerPawn_C_38.None=True
+REINST_BP_PlayerPawn_C_38.Tick=True
+REINST_BP_PlayerPawn_C_38.Camera=True
+REINST_BP_PlayerPawn_C_38.Weapon=True
+REINST_BP_PlayerPawn_C_38.Character=True
+REINST_BP_PlayerPawn_C_38.Pawn=True
+REINST_BP_PlayerPawn_C_38.Rendering=True
+REINST_BP_PlayerPawn_C_38.Replication=True
+REINST_BP_PlayerPawn_C_38.Input=True
+REINST_BP_PlayerPawn_C_38.Actor=True
+REINST_BP_PlayerPawn_C_42.None=True
+REINST_BP_PlayerPawn_C_42.Tick=True
+REINST_BP_PlayerPawn_C_42.Camera=True
+REINST_BP_PlayerPawn_C_42.Weapon=True
+REINST_BP_PlayerPawn_C_42.Character=True
+REINST_BP_PlayerPawn_C_42.Pawn=True
+REINST_BP_PlayerPawn_C_42.Rendering=True
+REINST_BP_PlayerPawn_C_42.Replication=True
+REINST_BP_PlayerPawn_C_42.Input=True
+REINST_BP_PlayerPawn_C_42.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2947,6 +2967,8 @@ BP_ShotgunCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscilla
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 REINST_BP_PlayerPawn_C_36="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_BP_PlayerPawn_C_38="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_BP_PlayerPawn_C_42="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
