death animation implemented. Fixed error on ASCharacter::onHealthChanged that make that any damage would trigger the death.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-20.04.39
+CoopGame.TimeStamp=2020.04.20-20.40.39
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2766,6 +2766,11 @@ REINST_BP_PlayerPawn_C_42.Rendering=True
 REINST_BP_PlayerPawn_C_42.Replication=True
 REINST_BP_PlayerPawn_C_42.Input=True
 REINST_BP_PlayerPawn_C_42.Actor=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimGraphNode_BlendListByBool.Config=True
+AnimGraphNode_BlendListByBool.BlendType=True
+AnimGraphNode_BlendListByBool.Option=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -2801,7 +2806,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/AnimStarterPack
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2924,6 +2929,9 @@ PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,
 BP_GrenadeProjectile_C=BP_GrenadeProjectile_C.Collision.Collision,
 SWeapon=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 SCharacter=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+Character=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+BP_CharacterAnimation_C=
+BoolProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -2980,26 +2988,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem2=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem3=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem4=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem5=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem6=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem7=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem8=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem9=/Game/UI/WBP_AmmoInfo
-MRUItem10=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem11=/Game/UI/WBP_SimpleCrosshair
-MRUItem12=/Game/AnimStarterPack/Reload_Rifle_Hip
-MRUItem13=/Game/AnimStarterPack/Reload_Pistol
-MRUItem14=/Game/AnimStarterPack/Reload_Rifle_Ironsights
-MRUItem15=/Game/AnimStarterPack/Ue4ASP_Character
-MRUItem16=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem17=/Game/AnimStarterPack/Jump_From_Jog
-MRUItem18=/Game/Weapons/Launcher_Skeleton
-MRUItem19=/Game/Weapons/Launcher
+MRUItem0=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem1=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem2=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem4=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem5=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem6=/Game/AnimStarterPack/Death_1
+MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem8=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem9=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem10=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem11=/Game/UI/WBP_AmmoInfo
+MRUItem12=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem13=/Game/UI/WBP_SimpleCrosshair
+MRUItem14=/Game/AnimStarterPack/Reload_Rifle_Hip
+MRUItem15=/Game/AnimStarterPack/Reload_Pistol
+MRUItem16=/Game/AnimStarterPack/Reload_Rifle_Ironsights
+MRUItem17=/Game/AnimStarterPack/Ue4ASP_Character
+MRUItem18=/Game/AnimStarterPack/Jump_From_Jog
+MRUItem19=/Game/Weapons/Launcher_Skeleton
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3035,6 +3043,8 @@ MRUItem19=/Game/Weapons/Launcher
 /Game/UI/WBP_SimpleCrosshair.WBP_SimpleCrosshair=0
 /Game/UI/WBP_AmmoInfo.WBP_AmmoInfo=0
 /Game/AnimStarterPack/BS_CrouchWalk.BS_CrouchWalk=0
+/Game/AnimStarterPack/Death_1.Death_1=0
+/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
