created health material.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-21.07.19
+CoopGame.TimeStamp=2020.04.20-21.46.11
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2784,12 +2784,30 @@ PainCausingVolume.Actor=True
 PainCausingVolume.HLOD=True
 PainCausingVolume.Mobile=True
 PainCausingVolume.AssetUserData=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionFrac.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionStaticSwitchParameter.General=True
+MaterialExpressionStaticSwitchParameter.MaterialExpressionStaticBoolParameter=True
+MaterialExpressionStaticSwitchParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
+ScreenPosition=X=470.000 Y=198.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2819,7 +2837,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2945,6 +2963,8 @@ SCharacter=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.Te
 Character=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 BP_CharacterAnimation_C=
 BoolProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -3007,26 +3027,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem2=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem4=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem5=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem6=/Game/AnimStarterPack/Death_1
-MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem8=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem9=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem10=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem11=/Game/UI/WBP_AmmoInfo
-MRUItem12=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem13=/Game/UI/WBP_SimpleCrosshair
-MRUItem14=/Game/AnimStarterPack/Reload_Rifle_Hip
-MRUItem15=/Game/AnimStarterPack/Reload_Pistol
-MRUItem16=/Game/AnimStarterPack/Reload_Rifle_Ironsights
-MRUItem17=/Game/AnimStarterPack/Ue4ASP_Character
-MRUItem18=/Game/AnimStarterPack/Jump_From_Jog
-MRUItem19=/Game/Weapons/Launcher_Skeleton
+MRUItem0=/Game/UI/M_HealthIndicator
+MRUItem1=/Game/UI/T_HealthMask
+MRUItem2=/Game/lessCineMat
+MRUItem3=/Game/NewMaterialInstanceConstant
+MRUItem4=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem5=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem6=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem8=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem9=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem10=/Game/AnimStarterPack/Death_1
+MRUItem11=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem12=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem13=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem14=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem15=/Game/UI/WBP_AmmoInfo
+MRUItem16=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem17=/Game/UI/WBP_SimpleCrosshair
+MRUItem18=/Game/AnimStarterPack/Reload_Rifle_Hip
+MRUItem19=/Game/AnimStarterPack/Reload_Pistol
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3064,6 +3084,9 @@ MRUItem19=/Game/Weapons/Launcher_Skeleton
 /Game/AnimStarterPack/BS_CrouchWalk.BS_CrouchWalk=0
 /Game/AnimStarterPack/Death_1.Death_1=0
 /Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn=0
+/Game/NewMaterialInstanceConstant.NewMaterialInstanceConstant=0
+/Game/lessCineMat.lessCineMat=0
+/Game/UI/T_HealthMask.T_HealthMask=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3253,5 +3276,11 @@ CurveVisibility=SelectedCurves
 [DetailCategoriesAdvanced]
 BP_Projectile_C.Shape=True
 BP_GrenadeProjectile_C.Collision=True
+StaticMeshActor.StaticMesh=False
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
 
 
