health indicator widget created and working.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-21.46.11
+CoopGame.TimeStamp=2020.04.20-23.02.16
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2802,6 +2802,28 @@ MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
+K2Node_CustomEvent.GraphNodeDetail=True
+WBP_HealthIndicator_C.Appearance=True
+WBP_HealthIndicator_C.Designer=True
+WBP_HealthIndicator_C.Input=True
+WBP_HealthIndicator_C.Interaction=True
+WBP_HealthIndicator_C.Performance=True
+WBP_HealthIndicator_C.Layout=True
+WBP_HealthIndicator_C.Behavior=True
+WBP_HealthIndicator_C.Render Transform=True
+WBP_HealthIndicator_C.Clipping=True
+WBP_HealthIndicator_C.Navigation=True
+WBP_HealthIndicator_C.Localization=True
+BP_PlayerPawn_C.HealthComponent=True
+MaterialExpressionDesaturation.MaterialExpressionDesaturation=True
+MaterialExpressionDesaturation.MaterialExpression=True
+MaterialExpressionVertexColor.MaterialExpression=True
+MaterialExpressionAtmosphericFogColor.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2955,7 +2977,7 @@ BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Renderi
 K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
-ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
+ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
 BP_GrenadeProjectile_C=BP_GrenadeProjectile_C.Collision.Collision,
 SWeapon=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
@@ -2965,6 +2987,8 @@ BP_CharacterAnimation_C=
 BoolProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+WBP_HealthIndicator_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+SHealthComponent=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -2993,9 +3017,9 @@ ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Objec
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
-Image=
-Widget=
-Visual=
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" "
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -3015,6 +3039,8 @@ PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstan
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PainCausingVolume;/Engine/Transient.ActorFactoryBoxVolume_16
@@ -3028,25 +3054,25 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/UI/M_HealthIndicator
-MRUItem1=/Game/UI/T_HealthMask
-MRUItem2=/Game/lessCineMat
-MRUItem3=/Game/NewMaterialInstanceConstant
-MRUItem4=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem5=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem6=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem8=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem9=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem10=/Game/AnimStarterPack/Death_1
-MRUItem11=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem12=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem13=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem14=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem15=/Game/UI/WBP_AmmoInfo
-MRUItem16=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem17=/Game/UI/WBP_SimpleCrosshair
-MRUItem18=/Game/AnimStarterPack/Reload_Rifle_Hip
-MRUItem19=/Game/AnimStarterPack/Reload_Pistol
+MRUItem1=/Game/UI/WBP_HealthIndicator
+MRUItem2=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem3=/Game/UI/T_HealthMask
+MRUItem4=/Game/lessCineMat
+MRUItem5=/Game/NewMaterialInstanceConstant
+MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem7=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem8=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem9=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem10=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem11=/Game/AnimStarterPack/Death_1
+MRUItem12=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem13=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem14=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem15=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem16=/Game/UI/WBP_AmmoInfo
+MRUItem17=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem18=/Game/UI/WBP_SimpleCrosshair
+MRUItem19=/Game/AnimStarterPack/Reload_Rifle_Hip
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3087,6 +3113,7 @@ MRUItem19=/Game/AnimStarterPack/Reload_Pistol
 /Game/NewMaterialInstanceConstant.NewMaterialInstanceConstant=0
 /Game/lessCineMat.lessCineMat=0
 /Game/UI/T_HealthMask.T_HealthMask=0
+/Game/UI/M_HealthIndicator.M_HealthIndicator=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
