--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -777,6 +777,10 @@ PhysicsAssetEditor.TimeStamp=2019.12.20-23.26.52
 PhysicsAssetEditor.LastCompileMethod=Unknown
 AnimationEditor.TimeStamp=2019.12.20-23.26.26
 AnimationEditor.LastCompileMethod=Unknown
+MeshBuilder.TimeStamp=2019.12.20-23.26.47
+MeshBuilder.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2019.12.20-23.27.00
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2824,6 +2828,15 @@ MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionVectorParameter.General=True
 MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2859,7 +2872,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3053,26 +3066,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/M_HealthIndicator
-MRUItem1=/Game/UI/WBP_HealthIndicator
-MRUItem2=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem3=/Game/UI/T_HealthMask
-MRUItem4=/Game/lessCineMat
-MRUItem5=/Game/NewMaterialInstanceConstant
-MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem7=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem8=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem9=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem10=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem11=/Game/AnimStarterPack/Death_1
-MRUItem12=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem13=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem14=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem15=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem16=/Game/UI/WBP_AmmoInfo
-MRUItem17=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem18=/Game/UI/WBP_SimpleCrosshair
-MRUItem19=/Game/AnimStarterPack/Reload_Rifle_Hip
+MRUItem0=/Game/Materials/SM_ExplosiveBarrel
+MRUItem1=/Game/UI/M_HealthIndicator
+MRUItem2=/Game/UI/WBP_HealthIndicator
+MRUItem3=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem4=/Game/UI/T_HealthMask
+MRUItem5=/Game/lessCineMat
+MRUItem6=/Game/NewMaterialInstanceConstant
+MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem8=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem10=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem11=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem12=/Game/AnimStarterPack/Death_1
+MRUItem13=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem14=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem15=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem16=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem17=/Game/UI/WBP_AmmoInfo
+MRUItem18=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem19=/Game/UI/WBP_SimpleCrosshair
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3114,6 +3127,7 @@ MRUItem19=/Game/AnimStarterPack/Reload_Rifle_Hip
 /Game/lessCineMat.lessCineMat=0
 /Game/UI/T_HealthMask.T_HealthMask=0
 /Game/UI/M_HealthIndicator.M_HealthIndicator=0
+/Game/Materials/SM_ExplosiveBarrel.SM_ExplosiveBarrel=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
