added, mesh, health components and default, dead materials.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-23.02.16
+CoopGame.TimeStamp=2020.04.21-02.02.03
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2837,6 +2837,8 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.EditableMesh=True
 StaticMesh.Navigation=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -3066,26 +3068,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/SM_ExplosiveBarrel
-MRUItem1=/Game/UI/M_HealthIndicator
-MRUItem2=/Game/UI/WBP_HealthIndicator
-MRUItem3=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem4=/Game/UI/T_HealthMask
-MRUItem5=/Game/lessCineMat
-MRUItem6=/Game/NewMaterialInstanceConstant
-MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem8=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem10=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem11=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem12=/Game/AnimStarterPack/Death_1
-MRUItem13=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem14=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem15=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem16=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem17=/Game/UI/WBP_AmmoInfo
-MRUItem18=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem19=/Game/UI/WBP_SimpleCrosshair
+MRUItem0=/Game/Materials/M_ExplosiveBarrel
+MRUItem1=/Game/Materials/SM_ExplosiveBarrel
+MRUItem2=/Game/UI/M_HealthIndicator
+MRUItem3=/Game/UI/WBP_HealthIndicator
+MRUItem4=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem5=/Game/UI/T_HealthMask
+MRUItem6=/Game/lessCineMat
+MRUItem7=/Game/NewMaterialInstanceConstant
+MRUItem8=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem9=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem10=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem11=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem12=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem13=/Game/AnimStarterPack/Death_1
+MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem15=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem16=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem17=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem18=/Game/UI/WBP_AmmoInfo
+MRUItem19=/Game/Blueprints/Weapons/BP_Rifle
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3128,6 +3130,7 @@ MRUItem19=/Game/UI/WBP_SimpleCrosshair
 /Game/UI/T_HealthMask.T_HealthMask=0
 /Game/UI/M_HealthIndicator.M_HealthIndicator=0
 /Game/Materials/SM_ExplosiveBarrel.SM_ExplosiveBarrel=0
+/Game/Materials/M_ExplosiveBarrel.M_ExplosiveBarrel=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
