was using skeletal mesh when static mesh was needed.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.21-02.02.03
+CoopGame.TimeStamp=2020.04.21-13.52.55
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2839,9 +2839,31 @@ StaticMesh.EditableMesh=True
 StaticMesh.Navigation=True
 MaterialExpressionClamp.MaterialExpressionClamp=True
 MaterialExpressionClamp.MaterialExpression=True
+BP_ExplosiveBarrel_C.Tick=True
+BP_ExplosiveBarrel_C.Barrel=True
+BP_ExplosiveBarrel_C.Rendering=True
+BP_ExplosiveBarrel_C.Replication=True
+BP_ExplosiveBarrel_C.Input=True
+BP_ExplosiveBarrel_C.Actor=True
+BP_ExplosiveBarrel_C.Variable=True
+BP_ExplosiveBarrel_C.TransformCommon=True
+BP_ExplosiveBarrel_C.Sockets=True
+BP_ExplosiveBarrel_C.Animation=True
+BP_ExplosiveBarrel_C.Mesh=True
+BP_ExplosiveBarrel_C.Clothing=True
+BP_ExplosiveBarrel_C.MasterPoseComponent=True
+BP_ExplosiveBarrel_C.Physics=True
+BP_ExplosiveBarrel_C.Collision=True
+BP_ExplosiveBarrel_C.ClothingSimulation=True
+BP_ExplosiveBarrel_C.Lighting=True
+BP_ExplosiveBarrel_C.Tags=True
+BP_ExplosiveBarrel_C.ComponentReplication=True
+BP_ExplosiveBarrel_C.Activation=True
+BP_ExplosiveBarrel_C.Cooking=True
+BP_ExplosiveBarrel_C.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3068,26 +3090,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_ExplosiveBarrel
-MRUItem1=/Game/Materials/SM_ExplosiveBarrel
-MRUItem2=/Game/UI/M_HealthIndicator
-MRUItem3=/Game/UI/WBP_HealthIndicator
-MRUItem4=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem5=/Game/UI/T_HealthMask
-MRUItem6=/Game/lessCineMat
-MRUItem7=/Game/NewMaterialInstanceConstant
-MRUItem8=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem9=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem10=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem11=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem12=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem13=/Game/AnimStarterPack/Death_1
-MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem15=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem16=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem17=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem18=/Game/UI/WBP_AmmoInfo
-MRUItem19=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem0=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem1=/Game/Materials/M_ExplosiveBarrel
+MRUItem2=/Game/Materials/SM_ExplosiveBarrel
+MRUItem3=/Game/UI/M_HealthIndicator
+MRUItem4=/Game/UI/WBP_HealthIndicator
+MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem6=/Game/UI/T_HealthMask
+MRUItem7=/Game/lessCineMat
+MRUItem8=/Game/NewMaterialInstanceConstant
+MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem10=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem11=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem12=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem13=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem14=/Game/AnimStarterPack/Death_1
+MRUItem15=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem16=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem17=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem18=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem19=/Game/UI/WBP_AmmoInfo
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
